# my_village

./: .gitignore  .gitmodules  Makefile  README.md  test.json
docs/: Lexicon.md
examples/config/: interiors.json
include/: asset.h  assets.h  biome.h  chunk.h  csp.h  draw_queue.h  name.h  orientation.h  p_color.h  parser.h  prop.h  rect.h  registry.h  render.h  str.h  terrain.h  texture.h  tile.h  utils.h  v2.h  wfc.h  world.h
lib/bsp/: Makefile
lib/cjson/: Makefile
lib/raylib/: Makefile
src/: asset.c  biome.c  chunk.c  main.c  prop.c  terrain.c  tile.c
src/assets/: assets_factory.c  assets_handling.c
src/biome/: biome_add.c  biome_factory.c  biome_get.c
src/csp/: collection.c  constraint.c  global_constraint.c  map.c  object.c  room.c
src/parser/: parser.c  parser_asset.c  parser_biome.c  parser_csp_constraint.c  parser_csp_obj.c  parser_csp_room.c  parser_error.c  parser_factory.c  parser_history.c  parser_prop.c  parser_render.c  parser_terrain.c  parser_texture.c  parser_utils.c  parser_world.c
src/prop/: prop_child.c  prop_factory.c  prop_handling.c
src/render/: draw_queue.c  texture.c
src/renderer/: renderer.c  renderer_display.c  renderer_load.c
src/utils/: list.c  orient.c  rect.c  registry.c  str.c  v2.c
src/wfc/: cell_state.c  collapser.c  map.c
src/world/: world.c  world_asset.c  world_biome.c  (+8 more)
tileset_app/: data_manager.py  main.py  pyproject.toml
tileset_app/models/: biome.py  relation.py  terrain_prop.py  tileset.py
tileset_app/views/: biome_tab.py  loading_tab.py  main_window.py  relations_tab.py  terrain_props_tab.py
(+39 files in other folders)
