[tool.poetry]
name = "tileset-app"
version = "0.1.0"
description = ""
authors = ["mathematisse <lucien.pineau@epitech.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
PySide6 = "^6.8.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
